# AI-Email_Triage

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
backend/: main.py
backend/api/: routes.py
backend/config/: settings.py
backend/database/: crud.py  database.py
backend/evaluation/: evaluate.py
backend/models/: db_models.py  schemas.py
backend/services/: decision_engine.py  env_simulation.py  nlp_classifier.py
backend/training/: retrain.py  train_classifier.py
chatbot/: agent.py  train.py
chatbot/data/: intents.json
data/: generate_dataset.py  process_enron.py
env/: __init__.py  email_env.py
frontend/: index.html
server/: app.py
